# filecrack

./: README.md  pyproject.toml
filecrack/: __init__.py  backends.py  cli.py
tests/: test_core.py
